# corrosive_rage

./: .gitignore  README.md  pyproject.toml
config/: config.ini
gui/: app.py
src/corrosive_rage/: __main__.py  cli.py
src/corrosive_rage/commands/: __init__.py  init.py  project.py  report.py  run.py
src/corrosive_rage/core/: base.py  utils.py
src/corrosive_rage/modules/: __init__.py  breach_recon.py  company_recon.py  domain_recon.py  dork_recon.py  email_recon.py  ip_recon.py  metadata_recon.py  phone_recon.py  username_recon.py
